fixed spacing issue

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -18,7 +18,7 @@ h1 {
   font-size: medium;
   font-weight: normal;
   position: absolute;
-  bottom:1%;
+  bottom:2%;
   left: 45%;
   color: white;
 }
@@ -83,7 +83,8 @@ h1 {
   
 }
 .right{
-  sid
+  width: 100%;
+  height: 100%;
 }
 .button2:active {
 
@@ -95,7 +96,7 @@ h1 {
   z-index: 10;
   position: absolute;
   bottom: 17%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #projects{
@@ -103,7 +104,7 @@ h1 {
   z-index: 10;
   position: absolute;
   bottom: 23%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #contact{
@@ -111,7 +112,7 @@ h1 {
   z-index: 10;
   position: absolute;
   bottom: 29%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #about{
@@ -119,7 +120,7 @@ h1 {
   z-index: 10;
   position: absolute;
   bottom: 11%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #reveal{
@@ -127,7 +128,7 @@ h1 {
   z-index: 10;
   position: absolute;
   bottom: 11%;
-  left:90%;
+  right:2%;
   display: none;
 }
 #emailME{
@@ -136,20 +137,19 @@ h1 {
   z-index: 10;
   position: fixed;
   bottom: 5%;
-  left:90%;
+  right:2%;
   display: none;
-  float: right;
 }
 #startbutton{
 display: none;
 bottom: 5%;
-left: 1%;
+left: 2%;
 }
 #res{
   z-index: 10;
   position: absolute;
   bottom: 17%;
-  left:1%;
+  left:2%;
   display: none;
 }
 
@@ -164,7 +164,7 @@ z-index: 0;
   z-index: 10;
   position: absolute;
   bottom: 29%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #download{
@@ -175,7 +175,7 @@ z-index: 0;
   z-index: 10;
   position: absolute;
   bottom: 11%;
-  left:1%;
+  left:2%;
   display: none;
 }
 #proj{
@@ -183,6 +183,6 @@ z-index: 0;
   position: absolute;
 
   bottom: 23%;
-  left:1%;
+  left:2%;
   display: none;
 }
